--- a/404.html
+++ b/404.html
@@ -96,6 +96,10 @@
   <ul>
   
       <li><article itemscope itemtype="http://schema.org/Blog">
+          <a href="https://leo-AJ.github.io/post/%E5%88%B7%E9%A2%98-%E9%93%BE%E8%A1%A81c%E8%AF%AD%E8%A8%80/">刷题 链表1（C语言）</a>
+      </article></li>
+  
+      <li><article itemscope itemtype="http://schema.org/Blog">
           <a href="https://leo-AJ.github.io/post/%E7%BA%BF%E6%80%A7%E8%A1%A8%E7%9A%84%E9%93%BE%E5%BC%8F%E5%AD%98%E5%82%A8%E7%BB%93%E6%9E%84/">线性表的链式存储结构</a>
       </article></li>
   
