--- a/404.html
+++ b/404.html
@@ -96,6 +96,10 @@
   <ul>
   
       <li><article itemscope itemtype="http://schema.org/Blog">
+          <a href="https://leo-aj.github.io/post/%E5%88%B7%E9%A2%98-%E4%BB%BB%E5%8A%A1%E8%B0%83%E5%BA%A6go%E8%AF%AD%E8%A8%80/">刷题 任务调度Go语言</a>
+      </article></li>
+  
+      <li><article itemscope itemtype="http://schema.org/Blog">
           <a href="https://leo-aj.github.io/post/%E9%98%9F%E5%88%97%E7%9A%84%E9%93%BE%E5%BC%8F%E5%AD%98%E5%82%A8%E7%BB%93%E6%9E%84/">队列的链式存储结构</a>
       </article></li>
   
