--- a/404.html
+++ b/404.html
@@ -96,6 +96,10 @@
   <ul>
   
       <li><article itemscope itemtype="http://schema.org/Blog">
+          <a href="https://leo-AJ.github.io/post/%E4%BA%8C%E5%8F%89%E6%A0%91%E5%88%B7%E9%A2%98-go%E8%AF%AD%E8%A8%80/">二叉树刷题 Go语言</a>
+      </article></li>
+  
+      <li><article itemscope itemtype="http://schema.org/Blog">
           <a href="https://leo-AJ.github.io/post/%E4%BA%8C%E5%8F%89%E6%A0%91/">二叉树</a>
       </article></li>
   
