--- a/404.html
+++ b/404.html
@@ -96,6 +96,10 @@
   <ul>
   
       <li><article itemscope itemtype="http://schema.org/Blog">
+          <a href="https://leo-aj.github.io/post/%E6%8E%92%E5%BA%8F%E7%AE%97%E6%B3%952/">排序算法2</a>
+      </article></li>
+  
+      <li><article itemscope itemtype="http://schema.org/Blog">
           <a href="https://leo-aj.github.io/post/%E6%8E%92%E5%BA%8F%E7%AE%97%E6%B3%951/">排序算法1</a>
       </article></li>
   
