--- a/404.html
+++ b/404.html
@@ -96,6 +96,10 @@
   <ul>
   
       <li><article itemscope itemtype="http://schema.org/Blog">
+          <a href="https://leo-aj.github.io/post/%E6%8E%92%E5%BA%8F%E5%88%B7%E9%A2%982go/">排序刷题2(Go)</a>
+      </article></li>
+  
+      <li><article itemscope itemtype="http://schema.org/Blog">
           <a href="https://leo-aj.github.io/post/%E6%8E%92%E5%BA%8F%E5%88%B7%E9%A2%981go/">排序刷题1(Go)</a>
       </article></li>
   
